# geometric_safety_features

./: BEFORE_YOU_PUBLISH.md  CHANGELOG.md  INSTALLATION.md  ONBOARDING.md  PUBLICATION_REPO_SUMMARY.md  README.md  knn_uncertainty_derivation.py  pyproject.toml  setup.py  test_geometry_bundle.py  validate_core.py
.github/workflows/: test.yml
benchmarks/: suite.py
benchmarks/results/: scaling_benchmark.json
data/: README.md
docs/: api.md  index.md
examples/: basic_usage.py  feature_analysis.py  ood_detection.py
experiments/: evaluate_knn_derivation.py
experiments/results/: knn_geometry_results.csv
mirrorfield/geometry/: bundle.py  engines.py  features.py
tests/: test_advanced_features.py  test_geometry.py
